<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:src="@drawable/vp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="#333"
            android:layout_gravity="center_vertical"
            android:text="@string/nombre"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textKms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="#333"
            android:layout_gravity="center_vertical"
            android:layout_below="@id/textNom"
            android:text="@string/kilometros"
            android:textSize="16dp"/>
        <TextView
            android:id="@+id/textValoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#333"
            android:layout_gravity="center_vertical"
            android:layout_below="@id/textKms"
            android:text="@string/valoracion"/>
    </RelativeLayout>
</LinearLayout>
