<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="@color/fondoSplash"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:id="@+id/imagenFondo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/path" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendas_verdes"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-thin"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/aplicaci_n_creada_por"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="15dp"
        android:fontFamily="sans-serif-condensed"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="bottom"
        android:text="@string/nombres"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp" />

</LinearLayout>